--- a/jsonplaceholder/package.json
+++ b/jsonplaceholder/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "payment-utils-specification",
+  "name": "jsonplaceholder-api",
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
