--- a/client/pom.xml
+++ b/client/pom.xml
@@ -7,22 +7,22 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.6.3</version>
+    <version>2.7.4</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
   <groupId>com.example.api</groupId>
   <artifactId>client</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <properties>
     <java.version>17</java.version>
-    <lombok.version>1.18.22</lombok.version>
+    <lombok.version>1.18.24</lombok.version>
     <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
-    <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
-    <openapi-generator-maven-plugin.version>5.3.0</openapi-generator-maven-plugin.version>
-    <boat-maven-plugin.version>0.15.4</boat-maven-plugin.version>
-<!--    <boat-maven-plugin.version>0.10.0</boat-maven-plugin.version>-->
+    <org.mapstruct.version>1.5.2.Final</org.mapstruct.version>
+    <openapi-generator-maven-plugin.version>6.2.0</openapi-generator-maven-plugin.version>
+    <boat-maven-plugin.version>0.16.5</boat-maven-plugin.version>
+    <!--    <boat-maven-plugin.version>0.10.0</boat-maven-plugin.version>-->
     <spec.resources.path>${project.build.directory}/specs</spec.resources.path>
   </properties>
 
@@ -55,7 +55,7 @@
     <dependency>
       <groupId>org.openapitools</groupId>
       <artifactId>jackson-databind-nullable</artifactId>
-      <version>0.2.1</version>
+      <version>0.2.3</version>
     </dependency>
     <dependency>
       <groupId>com.google.code.findbugs</groupId>
@@ -65,7 +65,7 @@
     <dependency>
       <groupId>org.springdoc</groupId>
       <artifactId>springdoc-openapi-ui</artifactId>
-      <version>1.5.12</version>
+      <version>1.6.11</version>
     </dependency>
     <!--
         <dependency>
@@ -77,12 +77,12 @@
     <dependency>
       <groupId>io.swagger</groupId>
       <artifactId>swagger-annotations</artifactId>
-      <version>1.6.3</version>
+      <version>1.6.7</version>
     </dependency>
     <dependency>
       <groupId>org.openapitools</groupId>
       <artifactId>jackson-databind-nullable</artifactId>
-      <version>0.2.1</version>
+      <version>0.2.3</version>
     </dependency>
     <!--
         <dependency>
@@ -113,6 +113,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
+        <version>3.3.0</version>
         <executions>
           <execution>
             <id>unpack</id>
@@ -176,7 +177,7 @@
 
   <profiles>
     <profile>
-      <id>openapi-generator-maven-plugin</id>
+      <id>openapi-generator-maven-plugin-default</id>
       <activation>
         <activeByDefault>true</activeByDefault>
       </activation>
@@ -213,6 +214,61 @@
       </build>
     </profile>
     <profile>
+      <id>openapi-generator-maven-plugin-other_library</id>
+      <dependencyManagement>
+        <dependencies>
+          <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-bom</artifactId>
+            <version>3.15.3.Final</version>
+            <type>pom</type>
+            <scope>import</scope>
+          </dependency>
+        </dependencies>
+      </dependencyManagement>
+      <dependencies>
+        <dependency>
+          <groupId>org.jboss.resteasy</groupId>
+          <artifactId>resteasy-client</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.resteasy</groupId>
+          <artifactId>resteasy-multipart-provider</artifactId>
+        </dependency>
+      </dependencies>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.openapitools</groupId>
+            <artifactId>openapi-generator-maven-plugin</artifactId>
+            <version>${openapi-generator-maven-plugin.version}</version>
+            <executions>
+              <execution>
+                <id>generate-jsonplaceholder-api</id>
+                <goals>
+                  <goal>generate</goal>
+                </goals>
+                <phase>generate-sources</phase>
+                <configuration>
+                  <generatorName>java</generatorName>
+                  <inputSpec>${spec.resources.path}/jsonplaceholder/jsonplaceholder-api-v1.0.0.yaml</inputSpec>
+                  <generateApiTests>false</generateApiTests>
+                  <generateModelTests>false</generateModelTests>
+                  <configOptions>
+                    <library>resteasy</library>
+                    <dateLibrary>java8</dateLibrary>
+                    <apiPackage>com.example.api.jsonplaceholder.api.v1</apiPackage>
+                    <modelPackage>com.example.api.jsonplaceholder.api.v1.model</modelPackage>
+                    <useBeanValidation>true</useBeanValidation>
+                  </configOptions>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
       <id>boat-maven-plugin</id>
       <build>
         <plugins>
@@ -224,22 +280,14 @@
               <execution>
                 <id>generate-jsonplaceholder-api</id>
                 <goals>
-                  <goal>generate-spring-boot-embedded</goal>
+                  <goal>generate-rest-template-embedded</goal>
+                  <!-- for server-side use: generate-spring-boot-embedded -->
                 </goals>
                 <phase>generate-sources</phase>
                 <configuration>
-                  <generatorName>java</generatorName>
                   <inputSpec>${spec.resources.path}/jsonplaceholder/jsonplaceholder-api-v1.0.0.yaml</inputSpec>
-                  <generateApiTests>false</generateApiTests>
-                  <generateModelTests>false</generateModelTests>
-                  <configOptions>
-                    <library>resttemplate</library>
-                    <dateLibrary>java8</dateLibrary>
-                    <apiPackage>com.example.api.jsonplaceholder.api.v1</apiPackage>
-                    <modelPackage>com.example.api.jsonplaceholder.api.v1.model</modelPackage>
-                    <useBeanValidation>true</useBeanValidation>
-                    <useWithModifiers>true</useWithModifiers>
-                  </configOptions>
+                  <apiPackage>com.example.api.jsonplaceholder.api.v1</apiPackage>
+                  <modelPackage>com.example.api.jsonplaceholder.api.v1.model</modelPackage>
                 </configuration>
               </execution>
             </executions>
