--- a/client/pom.xml
+++ b/client/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.2.2</version>
+    <version>3.3.2</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
@@ -17,11 +17,11 @@
 
   <properties>
     <java.version>17</java.version>
-    <lombok.version>1.18.32</lombok.version>
+    <lombok.version>1.18.34</lombok.version>
     <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
     <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
-    <openapi-generator-maven-plugin.version>7.5.0</openapi-generator-maven-plugin.version>
-    <boat-maven-plugin.version>0.17.33</boat-maven-plugin.version>
+    <openapi-generator-maven-plugin.version>7.8.0</openapi-generator-maven-plugin.version>
+    <boat-maven-plugin.version>0.17.47</boat-maven-plugin.version>
 <!--    <boat-maven-plugin.version>0.16.11</boat-maven-plugin.version>-->
     <spec.resources.path>${project.build.directory}/specs</spec.resources.path>
   </properties>
@@ -190,6 +190,7 @@
                     <modelPackage>com.example.api.jsonplaceholder.api.v1.model</modelPackage>
                     <useBeanValidation>true</useBeanValidation>
                     <useJakartaEe>true</useJakartaEe>
+                    <generateClientAsBean>true</generateClientAsBean>
                   </configOptions>
                 </configuration>
               </execution>
@@ -232,6 +233,7 @@
                     <apiPackage>com.example.api.jsonplaceholder.api.v1</apiPackage>
                     <modelPackage>com.example.api.jsonplaceholder.api.v1.model</modelPackage>
                     <useBeanValidation>true</useBeanValidation>
+                    <generateClientAsBean>true</generateClientAsBean>
                   </configOptions>
                 </configuration>
               </execution>
